guides/pd-disaggregation/rdma-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: rdma-device-plugin
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: rdma-device-plugin
  template:
    metadata:
      labels:
        name: rdma-device-plugin
    spec:
      containers:
      - name: rdma-device-plugin
        image: ghcr.io/k8snetworkplumbingwg/rdma-device-plugin:v1.1.0
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /dev
          name: dev
        - mountPath: /sys
          name: sys
        - mountPath: /var/lib/kubelet/device-plugins
          name: kubeletsockets
      volumes:
      - hostPath:
          path: /dev
        name: dev
      - hostPath:
          path: /sys
        name: sys
      - hostPath:
          path: /var/lib/kubelet/device-plugins
        name: kubeletsockets
